--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,51 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;600&display=swap');
+
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-size: "Open Sans";
+  margin: 0;
+  padding: 0;
 }
 
-a {
-  color: #00B7FF;
+h2, h3{
+  margin-top: -10px;
+  text-align: center;
+  font-size: 50px bold;
+}
+
+#tela-escura{
+  width: 100%;
+  height: 100%;
+  opacity: 0.99;
+  color: white;
+  display: none;
+  padding-top: 100px;
+  position: absolute;
+  background-color: black;
+}
+.container{
+  margin: 0 auto;
+  max-width: 240px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: teal;
+  border: 3px solid black;
+}
+
+.grid{
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-evenly;
+}
+
+.celula{
+  width: 75px;
+  height: 65px;
+  font-size: 30px;
+  margin: 4px 2px;
+  font-weight: 300;
+  padding-top: 10px;
+  border-radius: 3px;
+  text-align: center;
+  background-color: cadetblue;
 }
